# CoF2

./: CMakeLists.txt  README-CN.md
.cache/clangd/index/: main.cpp.04EB8471DFFCFF69.idx
include/: detail.h  lexer.hs
src/: CMakeLists.txt  ast.cpp  cof2.lex  cof2.yacc  main.cpp  main.out
